termux: use base16-solarflare as theme

--- a/termux/.termux/colors.properties
+++ b/termux/.termux/colors.properties
@@ -1,31 +1,34 @@
-# https://draculatheme.com/
-# https://github.com/dracula/xresources/blob/master/Xresources
-# special
-foreground=#f8f8f2
-cursor=#f8f8f2
-background=#282a36
-# black
-color0=#000000
-color8=#4d4d4d
-# red
-color1=#ff5555
-color9=#ff6e67
-# green
-color2=#50fa7b
-color10=#5af78e
-# yellow
-color3=#f1fa8c
-color11=#f4f99d
-# blue
-color4=#bd93f9
-color12=#caa9fa
-# magenta
-color5=#ff79c6
-color13=#ff92d0
-# cyan
-color6=#8be9fd
-color14=#9aedfe
-# white
-color7=#bfbfbf
-color15=#e6e6e6
+# Base16 Solar Flare - Termux color config
+# Scheme by Chuck Harmston (https://chuck.harmston.ch)
 
+background=#18262f
+foreground=#a6afb8
+cursor=#a6afb8
+
+# normal
+color0=#18262f
+color1=#ef5253
+color2=#7cc844
+color3=#e4b51c
+color4=#33b5e1
+color5=#a363d5
+color6=#52cbb0
+color7=#a6afb8
+
+# bright
+color8=#667581
+color9=#ef5253
+color10=#7cc844
+color11=#e4b51c
+color12=#33b5e1
+color13=#a363d5
+color14=#52cbb0
+color15=#f5f7fa
+
+# extended
+color16=#e66b2b
+color17=#d73c9a
+color18=#222e38
+color19=#586875
+color20=#85939e
+color21=#e8e9ed
