--- a/termux/.termux/termux.properties
+++ b/termux/.termux/termux.properties
@@ -36,20 +36,20 @@
 ###############
 
 ### Force black colors for drawer and dialogs
-# use-black-ui = true
+use-black-ui = true
 
 ###############
 # Keyboard shortcuts
 ###############
 
 ### Open a new terminal with ctrl + t (volume down + t)
-# shortcut.create-session = ctrl + t
+shortcut.create-session = ctrl + t
 
 ### Go one session down with (for example) ctrl + 2
-# shortcut.next-session = ctrl + 2
+shortcut.next-session = ctrl + n
 
 ### Go one session up with (for example) ctrl + 1
-# shortcut.previous-session = ctrl + 1
+shortcut.previous-session = ctrl + p
 
 ### Rename a session with (for example) ctrl + n
 # shortcut.rename-session = ctrl + n
@@ -72,7 +72,7 @@
 ###############
 
 ### Send the Escape key.
-# back-key=escape
+back-key=escape
 
 ### Hide keyboard or leave app (default).
 # back-key=back
